--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "koa-convert": "^1.2.0",
     "koa-ejs": "^3.0.0",
     "koa-logger": "^1.3.0",
-    "koa-oauth-server": "^1.0.1",
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
     "koa2-cookie-session": "0.0.1",
+    "debug": "^2.2.0",
+    "oauth2-server": "^3.0.0-b2",
     "lodash": "^4.16.4",
     "log4js": "^0.6.38",
     "optimist": "^0.6.1",
