--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "coordinator-node-client": "^1.0.6",
+    "debug": "^2.2.0",
     "koa": "^2.0.0-alpha.7",
     "koa-body": "^1.6.0",
     "koa-convert": "^1.2.0",
@@ -22,13 +23,15 @@
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
     "koa2-cookie-session": "0.0.1",
-    "debug": "^2.2.0",
-    "oauth2-server": "^3.0.0-b2",
     "lodash": "^4.16.4",
     "log4js": "^0.6.38",
+    "mysql": "^2.13.0",
+    "mysql2": "^1.2.0",
+    "oauth2-server": "^3.0.0-b2",
     "optimist": "^0.6.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
+    "sequelize": "^3.30.2",
     "yaml-config": "^0.3.0"
   },
   "devDependencies": {
