日志修改，添加 md5

--- a/app/appliction.yml
+++ b/app/appliction.yml
@@ -16,10 +16,33 @@ dev:
             max: 5
             min: 0
             idle: 10000
+        logging: true 
 test:
     server:
         port: 8100
+    datasource:
+        host: 127.0.0.1
+        port: 3306
+        database: accountcenter
+        username: root
+        password: mysql
+        pool:
+            max: 5
+            min: 0
+            idle: 10000
+        logging: false
 production:
     server:
         port: 8100
+    datasource:
+        host: 127.0.0.1
+        port: 3306
+        database: accountcenter
+        username: root
+        password: mysql
+        pool:
+            max: 5
+            min: 0
+            idle: 10000
+        logging: false
  
