--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-    "name": "oauth2",
-    "version": "1.0.0",
-    "description": "用户授权管理平台",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/xiangwenbin/oauth-service.git"
-    },
-    "author": "xwb",
-    "license": "ISC",
-    "dependencies": {
-        "babel-polyfill": "^6.16.0",
-        "body-parser": "^1.15.2",
-        "co": "^4.6.0",
-        "continuation-local-storage": "^3.2.0",
-        "coordinator-node-client": "^1.0.6",
-        "debug": "^2.2.0",
-        "koa": "^2.0.0-alpha.7",
-        "koa-body": "^1.6.0",
-        "koa-convert": "^1.2.0",
-        "koa-ejs": "^3.0.0",
-        "koa-logger": "^1.3.0",
-        "koa-router": "^7.0.1",
-        "koa-static": "^2.0.0",
-        "koa2-cookie-session": "0.0.1",
-        "lodash": "^4.16.4",
-        "log4js": "^0.6.38",
-        "mysql": "^2.13.0",
-        "mysql2": "^1.2.0",
-        "oauth2-server": "^3.0.0-b2",
-        "optimist": "^0.6.1",
-        "request": "^2.75.0",
-        "request-promise": "^4.1.1",
-        "sequelize": "^3.30.2",
-        "yaml-config": "^0.3.0"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.16.0",
-        "babel-core": "^6.17.0",
-        "babel-plugin-transform-async-to-generator": "^6.16.0",
-        "babel-plugin-transform-es2015-destructuring": "^6.16.0",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
-        "babel-plugin-transform-es2015-parameters": "^6.17.0",
-        "babel-plugin-transform-es2015-spread": "^6.8.0",
-        "babel-plugin-transform-strict-mode": "^6.11.3",
-        "babel-preset-es2015": "^6.16.0",
-        "babel-preset-latest": "^6.16.0",
-        "babel-preset-stage-0": "^6.16.0",
-        "babel-preset-stage-3": "^6.17.0"
-    }
+  "name": "oauth2",
+  "version": "1.0.0",
+  "description": "用户授权管理平台",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xiangwenbin/oauth-service.git"
+  },
+  "author": "xwb",
+  "license": "ISC",
+  "dependencies": {
+    "babel-polyfill": "^6.16.0",
+    "body-parser": "^1.15.2",
+    "co": "^4.6.0",
+    "continuation-local-storage": "^3.2.0",
+    "coordinator-node-client": "^1.0.6",
+    "debug": "^2.2.0",
+    "jshashes": "^1.0.6",
+    "koa": "^2.0.0-alpha.7",
+    "koa-body": "^1.6.0",
+    "koa-convert": "^1.2.0",
+    "koa-ejs": "^3.0.0",
+    "koa-logger": "^1.3.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^2.0.0",
+    "koa2-cookie-session": "0.0.1",
+    "lodash": "^4.16.4",
+    "log4js": "^0.6.38",
+    "mysql": "^2.13.0",
+    "mysql2": "^1.2.0",
+    "oauth2-server": "^3.0.0-b2",
+    "optimist": "^0.6.1",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "sequelize": "^3.30.2",
+    "yaml-config": "^0.3.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
+    "babel-plugin-transform-es2015-parameters": "^6.17.0",
+    "babel-plugin-transform-es2015-spread": "^6.8.0",
+    "babel-plugin-transform-strict-mode": "^6.11.3",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0"
+  }
 }
