--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "continuation-local-storage": "^3.2.0",
@@ -33,8 +34,10 @@
     "log4js": "^0.6.38",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
+    "node-uuid": "^1.4.7",
     "oauth2-server": "^3.0.0-b2",
     "optimist": "^0.6.1",
+    "redis": "^2.6.5",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
