--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,10 @@
     "compilerOptions": {
         "target": "ES6",
         "module": "commonjs"
+    },
+    "typeAcquisition": {
+        "include": [
+            "lodash"
+        ]
     }
 }
