--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
-    "yaml-config": "^0.3.0"
+    "yaml-config": "^0.3.0",
+    "ora": "^0.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
