--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
     "koa2-cookie-session": "0.0.1",
+    "koa2-nunjucks": "^1.1.1",
     "lodash": "^4.16.4",
     "log4js": "^0.6.38",
     "mysql": "^2.13.0",
@@ -37,12 +38,14 @@
     "node-uuid": "^1.4.7",
     "oauth2-server": "^3.0.0-b2",
     "optimist": "^0.6.1",
+    "ora": "^0.3.0",
     "redis": "^2.6.5",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
-    "yaml-config": "^0.3.0",
-    "ora": "^0.3.0"
+    "xtemplate": "4.2.4",
+    "xtpl": "3.1.9",
+    "yaml-config": "^0.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
